--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,11 +1,11 @@
 {
     "application.organization.name": "Office fédéral de l'informatique et de la télécommunication OFIT",
     "application.title": "Certificat COVID",
-    "bulk.revocation.file.upload": "Verrouiller des certificats",
+    "bulk.revocation.file.upload": "Révoquer des certificats",
     "bulk.revocation.instructions": "Vous pouvez révoquer plusieurs certificats. Pour ce faire, veuillez charger le fichier CSV contenant les données.",
-    "bulk.revocation.link": "Verrouiller plusieurs certificats",
+    "bulk.revocation.link": "Révoquer plusieurs certificats",
     "bulk.revocation.success": "La révocation des certificats a été traitée avec succès.",
-    "bulk.revocation.title": "Verrouiller plusieurs certificats",
+    "bulk.revocation.title": "Révoquer plusieurs certificats",
     "bulk.revocation.warning": "Toutes les révocations n'ont pas abouti. Veuillez vérifier le CSV retourné pour connaître les détails.",
     "certificateCreate.form.group.personalData": "Données personnelles",
     "certificateCreate.form.group.recovery": "Guérison",
@@ -84,12 +84,12 @@
     "certificateCreate.step-two.personaldata.information": "Les données personnelles doivent être identiques au document d'identité.",
     "certificateCreate.step-two.vaccinationinformation": "<p>Les donn&eacute;es sur les doses de vaccin re&ccedil;ues (X) et requises (Y) doivent &ecirc;tre saisies conform&eacute;ment &agrave; l&rsquo;une des r&egrave;gles suivantes&nbsp;:</p> <ul> <li>Derni&egrave;re dose d&rsquo;un vaccin &agrave; deux doses (p.&nbsp;ex. ARNm) sans infection ant&eacute;rieure&nbsp;: <ul> <li>1/2&nbsp;: vaccination incompl&egrave;te (ne peut pas &ecirc;tre utilis&eacute;e pour voyager ou pour les domaines n&eacute;cessitant un certificat)</li> <li>2/2&nbsp;: vaccination compl&egrave;te (immunisation de base)</li> <li>3/3, 4/4, ...&nbsp;: vaccination de rappel (<em>booster</em>)</li> </ul> </li> </ul> <ul> <li>Derni&egrave;re dose d&rsquo;un vaccin &agrave; deux doses (p. ex. ARNm) apr&egrave;s une infection ant&eacute;rieure (&laquo; doses requises &raquo;: Y doit toujours &ecirc;tre 1): <ul> <li>1/1&nbsp;vaccination compl&egrave;te apr&egrave;s gu&eacute;rison</li> <li>2/1, 3/1, 4/1, ...&nbsp;: vaccination de rappel (<em>booster</em>) apr&egrave;s gu&eacute;rison</li> </ul> </li> </ul> <ul> <li>Derni&egrave;re dose d&rsquo;un vaccin &agrave; une dose (p.&nbsp;ex. Janssen) sans infection ant&eacute;rieure&nbsp;: <ul> <li>1/1&nbsp;: vaccination compl&egrave;te</li> <li>2/1&nbsp;: vaccination de rappel (<em>booster</em>)</li> </ul> </li> </ul>",
     "certificateRevoke.alreadyRevoked": "UVCI déjà verrouillé: {{date}}",
-    "certificateRevoke.button": "Verrouiller le certificat",
+    "certificateRevoke.button": "Révoquer le certificat",
     "certificateRevoke.fraudFlag": "Émission non autorisée (par exemple, en raison de fausses déclarations intentionnelles ou d'une délivrance absuive)",
-    "certificateRevoke.instructions": "Vous pouvez verrouiller ici des certificats établis. Ils apparaîtront ensuite sur une liste verrouillée.",
-    "certificateRevoke.link": "Verrouiller le certificat",
+    "certificateRevoke.instructions": "Vous pouvez révoquer ici des certificats établis. Ils apparaîtront ensuite sur une liste verrouillée.",
+    "certificateRevoke.link": "Révoquer le certificat",
     "certificateRevoke.success": "Le certificat doté de l'UVCI {{uvci}} a été verrouillé avec succès.",
-    "certificateRevoke.title": "Verrouiller le certificat",
+    "certificateRevoke.title": "Révoquer le certificat",
     "certificateRevoke.uvci": "UVCI",
     "certificateRevoke.uvci.info": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "certificateRevoke.warning": "<p>Les émetteurs documentent la révocation de certificats en consignant les informations suivantes:</p><ul><li>l’identifiant unique du certificat (UVCI);</li><li>des indications permettant de comprendre la décision de révocation du certificat.</li></ul>",
@@ -203,7 +203,7 @@
     "notificationsManagement.notification.content.it": "Italien",
     "notificationsManagement.notification.end": "Heure de fin\t",
     "notificationsManagement.notification.isClosable": "Possibilité de fermer",
-    "notificationsManagement.notification.start": "Start time\n",
+    "notificationsManagement.notification.start": "Heure de début",
     "notificationsManagement.notification.type": "Type",
     "notificationsManagement.notification.type.info": "Information",
     "notificationsManagement.notification.type.warning": "Alerte",
