--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -180,6 +180,7 @@
     "i18n.validation.dosesTooBig": "Muss kleiner oder gleich als erforderliche Dosen sein",
     "i18n.validation.invalidAppDeliveryCode": "Ungültiger Zustellungscode",
     "i18n.validation.invalidShortDate": "Ungültiges Datumsformat, bitte verwenden Sie \"jjjj\" oder \"jjjj-mm\"",
+    "i18n.validation.matDatepickerMin": "Datum zu klein",
     "i18n.validation.matDatepickerParse": "Ungültiges Datumsformat, bitte verwenden Sie \"tt.mm.jjjj hh:mm\"",
     "i18n.validation.maxlength": "Bitte geben Sie höchstens {{requiredLength}} Zeichen ein",
     "i18n.validation.notIssuableInSwitzerland": "Ausgewählter Impfstoff ist in der Schweiz nicht zugelassen.",
