Changed visual appearance to match specification, Added selection for all caches

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,10 @@
     "bulk.revocation.success": "Certificates have been successfully revoked.",
     "bulk.revocation.title": "Revoke multiple certificates",
     "bulk.revocation.warning": "Not all revocations were successful. Please check the returned CSV to know the details.",
+    "cache.reset.title": "Cache",
+    "cache.reset.subtitle": "Select the caches to be deleted",
+    "cache.reset.select": "Select all",
+    "cache.reset.resetCaches": "Clear Caches",
     "certificateCreate.form.group.personalData": "Personal data",
     "certificateCreate.form.group.recovery": "Recovery",
     "certificateCreate.form.group.test": "Test",
@@ -103,6 +107,9 @@
     "dashboard.bulk.revocation.action": "Revoke multiple certificates",
     "dashboard.bulk.revocation.description": "You can revoke multiple generated certificates here. Revoked certificates are declared invalid and can no longer be used.",
     "dashboard.bulk.revocation.title": "Revoke multiple certificates",
+    "dashboard.cacheReset.action": "Delete Caches",
+    "dashboard.cacheReset.description": "Caches can be deleted here",
+    "dashboard.cacheReset.title": "Caches",
     "dashboard.createCertificate.action": "Generate certificate",
     "dashboard.createCertificate.description": "You can generate a new certificate here.",
     "dashboard.createCertificate.title": "Generate new certificate",
