--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -7,6 +7,10 @@
     "bulk.revocation.success": "La richiesta di revoca dei certificati è stata elaborata con successo.",
     "bulk.revocation.title": "Bloccare più certificati",
     "bulk.revocation.warning": "Non tutte le revoche hanno avuto successo. Controllare il CSV restituito per conoscere i dettagli.",
+    "cache.reset.title": "Cache",
+    "cache.reset.subtitle": "Selezionare le cache da eliminare",
+    "cache.reset.select": "Seleziona tutto",
+    "cache.reset.resetCaches": "Cancella cache",
     "certificateCreate.form.group.personalData": "Dati personali",
     "certificateCreate.form.group.recovery": "Guarigione",
     "certificateCreate.form.group.test": "Test",
@@ -103,6 +107,9 @@
     "dashboard.bulk.revocation.action": "Bloccare più certificati",
     "dashboard.bulk.revocation.description": "Qui è possibile bloccare più certificati creati. I certificati revocati sono dichiarati non validi e non possono più essere utilizzati.",
     "dashboard.bulk.revocation.title": "Bloccare più certificati",
+    "dashboard.cacheReset.action": "Cancella cache",
+    "dashboard.cacheReset.description": "Le cache possono essere eliminate qui.",
+    "dashboard.cacheReset.title": "Caches",
     "dashboard.createCertificate.action": "Crea certificato",
     "dashboard.createCertificate.description": "Qui è possibile creare un nuovo certificato.",
     "dashboard.createCertificate.title": "Creare un nuovo certificato",
