--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -7,6 +7,10 @@
     "bulk.revocation.success": "Die Zertifikate wurden erfolgreich widerrufen.",
     "bulk.revocation.title": "Mehrere Zertifikate sperren",
     "bulk.revocation.warning": "Nicht alle Sperrungen waren erfolgreich. Bitte prüfen Sie die generierte CSV-Datei, um Details zu erfahren.",
+    "cache.reset.title": "Cache",
+    "cache.reset.subtitle": "Wählen Sie die zu löschenden Caches aus.",
+    "cache.reset.select": "Alle auswählen",
+    "cache.reset.resetCaches": "Caches löschen",
     "certificateCreate.form.group.personalData": "Personalien",
     "certificateCreate.form.group.recovery": "Genesung",
     "certificateCreate.form.group.test": "Test",
@@ -103,6 +107,9 @@
     "dashboard.bulk.revocation.action": "Mehrere Zertifikate sperren",
     "dashboard.bulk.revocation.description": "Hier können Sie mehrere erstellte Zertifikate sperren. Gesperrte Zertifikate werden als nicht gültig deklariert und können nicht mehr verwendet werden.",
     "dashboard.bulk.revocation.title": "Mehrere Zertifikate sperren",
+    "dashboard.cacheReset.action": "Caches löschen",
+    "dashboard.cacheReset.description": "Hier können Caches gelöscht werden.",
+    "dashboard.cacheReset.title": "Caches",
     "dashboard.createCertificate.action": "Zertifikat erstellen",
     "dashboard.createCertificate.description": "Hier können Sie ein neues Zertifikat erstellen.",
     "dashboard.createCertificate.title": "Neues Zertifikat erstellen",
