--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -7,11 +7,11 @@
     "bulk.revocation.success": "Die Zertifikate wurden erfolgreich widerrufen.",
     "bulk.revocation.title": "Mehrere Zertifikate sperren",
     "bulk.revocation.warning": "Nicht alle Sperrungen waren erfolgreich. Bitte prüfen Sie die generierte CSV-Datei, um Details zu erfahren.",
-    "cache.reset.title": "Cache",
-    "cache.reset.subtitle": "Wählen Sie die zu löschenden Caches aus.",
-    "cache.reset.success": "Caches wurden erfolgreich gelöscht",
+    "cache.reset.title": "Cache zurücksetzen",
+    "cache.reset.subtitle": "Wählen Sie die zurückzusetzenden Caches aus.",
+    "cache.reset.success": "Caches wurden erfolgreich zurückgesetzt",
     "cache.reset.select": "Alle auswählen",
-    "cache.reset.resetCaches": "Caches löschen",
+    "cache.reset.resetCaches": "Ausgewählte Caches zurücksetzen",
     "certificateCreate.form.group.personalData": "Personalien",
     "certificateCreate.form.group.recovery": "Genesung",
     "certificateCreate.form.group.test": "Test",
@@ -108,9 +108,9 @@
     "dashboard.bulk.revocation.action": "Mehrere Zertifikate sperren",
     "dashboard.bulk.revocation.description": "Hier können Sie mehrere erstellte Zertifikate sperren. Gesperrte Zertifikate werden als nicht gültig deklariert und können nicht mehr verwendet werden.",
     "dashboard.bulk.revocation.title": "Mehrere Zertifikate sperren",
-    "dashboard.cacheReset.action": "Caches löschen",
-    "dashboard.cacheReset.description": "Hier können Caches gelöscht werden.",
-    "dashboard.cacheReset.title": "Caches",
+    "dashboard.cacheReset.action": "Cache zurücksetzen",
+    "dashboard.cacheReset.description": "Hier können Caches zurückgesetzt werden.",
+    "dashboard.cacheReset.title": "Cache zurücksetzen",
     "dashboard.createCertificate.action": "Zertifikat erstellen",
     "dashboard.createCertificate.description": "Hier können Sie ein neues Zertifikat erstellen.",
     "dashboard.createCertificate.title": "Neues Zertifikat erstellen",
