--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -318,6 +318,7 @@
     "reports.certTypesSelection.oneCertTypeHasToBeSelected": "At least one certificate type must be selected",
     "reports.certTypesSelection.select-all": "Select all certificate types",
     "reports.certTypesSelection.title": "Please choose the certificate type(s) for which you want to generate the report:",
+    "reports.datalimit.description": "Please note: for data protection reasons, reports cannot be compiled in the reporting service for dates that are more than two years in the past.",
     "reports.dataRoomSelection": "Canton/area selected:",
     "reports.dateFromTo.date-from": "Start date",
     "reports.dateFromTo.date-to": "End date",
